import React from "react";
import CurrencyInputConverter, { Props } from "../CurrencyInputConverter";
import { cleanup, fireEvent, render, screen } from "@testing-library/react";

describe("render the CurrencyInputConverter", () => {
  const mockRates = {
    AED: 1,
    AFN: 2,
    ALL: 3,
    AMD: 4,
    ANG: 5,
    AOA: 6,
    ARS: 7,
    AUD: 12,
    AWG: 12,
    AZN: 12,
    BAM: 12,
    BBD: 12,
    BDT: 12,
    BGN: 12,
    BHD: 12,
    BIF: 12,
    BMD: 12,
    BND: 12,
    BOB: 12,
    BRL: 12,
    BSD: 12,
    BTC: 12,
    BTN: 12,
    BWP: 12,
    BYN: 12,
    BYR: 12,
    BZD: 12,
    CAD: 12,
    CDF: 12,
    CHF: 12,
    CLF: 12,
    CLP: 12,
    CNY: 12,
    COP: 12,
    CRC: 12,
    CUC: 12,
    CUP: 12,
    CVE: 12,
    CZK: 12,
    DJF: 12,
    DKK: 12,
    DOP: 12,
    DZD: 12,
    EGP: 12,
    ERN: 12,
    ETB: 12,
    EUR: 12,
    FJD: 12,
    FKP: 12,
    GBP: 12,
    GEL: 12,
    GGP: 12,
    GHS: 12,
    GIP: 12,
    GMD: 12,
    GNF: 12,
    GTQ: 12,
    GYD: 12,
    HKD: 12,
    HNL: 12,
    HRK: 12,
    HTG: 12,
    HUF: 12,
    IDR: 12,
    ILS: 12,
    IMP: 12,
    INR: 12,
    IQD: 12,
    IRR: 12,
    ISK: 12,
    JEP: 12,
    JMD: 12,
    JOD: 12,
    JPY: 12,
    KES: 12,
    KGS: 12,
    KHR: 12,
    KMF: 12,
    KPW: 12,
    KRW: 12,
    KWD: 12,
    KYD: 12,
    KZT: 12,
    LAK: 12,
    LBP: 12,
    LKR: 12,
    LRD: 12,
    LSL: 12,
    LTL: 12,
    LVL: 12,
    LYD: 12,
    MAD: 12,
    MDL: 12,
    MGA: 12,
    MKD: 12,
    MMK: 12,
    MNT: 12,
    MOP: 12,
    MRO: 12,
    MUR: 12,
    MVR: 12,
    MWK: 12,
    MXN: 12,
    MYR: 12,
    MZN: 12,
    NAD: 12,
    NGN: 12,
    NIO: 12,
    NOK: 12,
    NPR: 12,
    NZD: 12,
    OMR: 12,
    PAB: 12,
    PEN: 12,
    PGK: 12,
    PHP: 12,
    PKR: 12,
    PLN: 12,
    PYG: 12,
    QAR: 12,
    RON: 12,
    RSD: 12,
    RUB: 12,
    RWF: 12,
    SAR: 12,
    SBD: 12,
    SCR: 12,
    SDG: 12,
    SEK: 12,
    SGD: 12,
    SHP: 12,
    SLL: 12,
    SOS: 12,
    SRD: 12,
    STD: 12,
    SVC: 12,
    SYP: 12,
    SZL: 12,
    THB: 12,
    TJS: 12,
    TMT: 12,
    TND: 12,
    TOP: 12,
    TRY: 12,
    TTD: 12,
    TWD: 12,
    TZS: 12,
    UAH: 12,
    UGX: 12,
    USD: 12,
    UYU: 12,
    UZS: 12,
    VEF: 12,
    VND: 12,
    VUV: 12,
    WST: 12,
    XAF: 12,
    XAG: 12,
    XAU: 12,
    XCD: 12,
    XDR: 12,
    XOF: 12,
    XPF: 12,
    YER: 12,
    ZAR: 12,
    ZMK: 12,
    ZMW: 12,
    ZWL: 12,
  };

  afterEach(cleanup);
  const props: Props = {
    currencyFrom: "string",
    rates: mockRates,
    setRates: () => null,
    setCurrencyTo: () => null,
    setCurrencyFrom: () => null,
    currencyTo: "string",
  };
  it("should render the CurrencyInputConverter", () => {
    const view = render(<CurrencyInputConverter {...props} />);
    expect(view).toMatchSnapshot();
  });

  it("should add input value to the input field", () => {
    const view = render(<CurrencyInputConverter {...props} />);
    const convertInput = screen.getByPlaceholderText("e.g. 1 AUD to USD");
    expect(convertInput).toBeTruthy();
    fireEvent.change(convertInput, { target: { value: "1 EUR to USD" } });
    expect(view).toMatchSnapshot();
  });

  it("should close the api pop-up message and change it into an error message", () => {
    const view = render(<CurrencyInputConverter {...props} />);
    const convertButton = screen.getByTestId("alertButtonId");
    expect(convertButton).toBeTruthy();
    fireEvent.click(convertButton);
    expect(view).toMatchSnapshot();
  });
});
